--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.veesr0j.mongodb.net/meh
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRE=30d
 
-# Upload Settings
-MAX_FILE_SIZE=10485760
-UPLOAD_PATH=./uploads
+# Cloudinary Configuration
+# احصل على هذه القيم من لوحة تحكم Cloudinary الخاصة بك
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
