--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "Backend API for Mehnati Li - منصة مهنتي لي للإعلانات والوظائف",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -22,6 +23,7 @@
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
