feat: Add password reset functionality with email support
- Added forgotPassword endpoint to send reset email
- Added resetPassword endpoint to update password
- Added verifyResetToken endpoint to validate reset links
- Added email configuration with nodemailer
- Updated User model with resetPasswordToken and resetPasswordExpire fields
- Updated .env.example with SMTP configuration variables

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,15 @@ JWT_EXPIRE=30d
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
+
+# Email Configuration (SMTP) - إعدادات البريد الإلكتروني
+# يمكنك استخدام Gmail أو أي خدمة SMTP أخرى
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_EMAIL=your_email@gmail.com
+SMTP_PASSWORD=your_app_password
+FROM_NAME=مهنتي لي
+FROM_EMAIL=noreply@mehnati.com
+
+# Frontend URL - رابط الواجهة الأمامية (لروابط إعادة تعيين كلمة المرور)
+FRONTEND_URL=https://your-frontend-url.com
