--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.12",
     "sharp": "^0.34.5",
     "uuid": "^13.0.0"
   },
