feat: Add password reset web page on server
- Added HTML page for password reset at /reset-password/:token
- Updated authController to use server URL for reset links
- No more FRONTEND_URL needed - reset page is hosted on the server
- Beautiful Arabic RTL design matching the app style
- Shows success message after password update

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 PORT=5000
 NODE_ENV=development
 
+# Server URL - رابط الخادم (اختياري - يُستخدم تلقائياً إذا لم يُحدد)
+# SERVER_URL=https://your-server-url.com
+
 # MongoDB Connection
 # استبدل <username> و <password> ببيانات المستخدم الخاصة بك من MongoDB Atlas
 MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.veesr0j.mongodb.net/mehnati?retryWrites=true&w=majority&appName=Cluster0
@@ -18,12 +21,10 @@ CLOUDINARY_API_SECRET=your_api_secret
 
 # Email Configuration (SMTP) - إعدادات البريد الإلكتروني
 # يمكنك استخدام Gmail أو أي خدمة SMTP أخرى
+# لاستخدام Gmail: فعّل التحقق بخطوتين ثم أنشئ كلمة مرور التطبيق
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_EMAIL=your_email@gmail.com
-SMTP_PASSWORD=your_app_password
+SMTP_PASSWORD=your_16_character_app_password
 FROM_NAME=مهنتي لي
-FROM_EMAIL=noreply@mehnati.com
-
-# Frontend URL - رابط الواجهة الأمامية (لروابط إعادة تعيين كلمة المرور)
-FRONTEND_URL=https://your-frontend-url.com
+FROM_EMAIL=your_email@gmail.com
