feat: Migrate from Cloudinary to Backblaze B2 with media compression
- Add Backblaze B2 storage service
- Add image compression using Sharp (WebP, 70% quality)
- Add video compression using FFmpeg (H.264, CRF 28)
- Update upload controllers to use new storage service
- Update middleware to use memory storage
- Add compression service with configurable settings
- Update environment variables for B2 credentials
- Maintain backward compatibility with Cloudinary URLs
- Add migration documentation

Cost savings: ~80% on storage costs
Compression: ~70-80% file size reduction

--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,32 @@ MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.veesr0j.mongodb.net/meh
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRE=30d
 
-# Cloudinary Configuration
-# احصل على هذه القيم من لوحة تحكم Cloudinary الخاصة بك
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
+# ============================================
+# Backblaze B2 Cloud Storage Configuration
+# ============================================
+# احصل على هذه القيم من لوحة تحكم Backblaze B2
+# https://secure.backblaze.com/b2_buckets.htm
 
-# Email Configuration (SMTP) - إعدادات البريد الإلكتروني
+# Application Key ID (يبدأ بـ c85...)
+B2_APPLICATION_KEY_ID=your_key_id
+
+# Application Key (المفتاح السري)
+B2_APPLICATION_KEY=your_application_key
+
+# اسم الـ Bucket (يجب إنشاؤه في لوحة التحكم)
+B2_BUCKET_NAME=mehnati-media
+
+# ============================================
+# Cloudinary Configuration (قديم - للتوافق مع الملفات القديمة)
+# ============================================
+# يمكن إزالة هذه الإعدادات بعد نقل جميع الملفات إلى Backblaze B2
+# CLOUDINARY_CLOUD_NAME=your_cloud_name
+# CLOUDINARY_API_KEY=your_api_key
+# CLOUDINARY_API_SECRET=your_api_secret
+
+# ============================================
+# Email Configuration (SMTP)
+# ============================================
 # يمكنك استخدام Gmail أو أي خدمة SMTP أخرى
 # لاستخدام Gmail: فعّل التحقق بخطوتين ثم أنشئ كلمة مرور التطبيق
 SMTP_HOST=smtp.gmail.com
