--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mehnati-backend",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
@@ -10,10 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "Backend API for Mehnati Li - منصة مهنتي لي للإعلانات والوظائف",
+  "description": "Backend API for Mehnati Li - منصة مهنتي لي للإعلانات والوظائف - v2.0 with Backblaze B2 storage and compression",
   "dependencies": {
+    "backblaze-b2": "^1.7.0",
     "bcryptjs": "^3.0.3",
-    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -23,7 +23,6 @@
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.12",
     "sharp": "^0.34.5",
     "uuid": "^13.0.0"
