--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.0.0",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node --expose-gc --max-old-space-size=450 src/server.js",
+    "dev": "nodemon --expose-gc src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
