✨ إضافة Firebase Cloud Messaging (FCM) لإرسال الإشعارات
- تثبيت firebase-admin SDK
- إضافة config/firebase.js لتهيئة Firebase
- إضافة services/fcmService.js لإرسال الإشعارات
- إضافة routes/fcm.js لـ API endpoints
- تحديث postController.js لإرسال إشعارات تلقائية عند إنشاء منشور/وظيفة
- تحديث server.js لتهيئة Firebase عند بدء السيرفر
- تحديث .env.example و .gitignore
- دعم إرسال الإشعارات إلى Topics حسب التصنيف
- دعم الاشتراك وإلغاء الاشتراك في Topics
- دعم إرسال الإشعارات لأجهزة محددة

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules/
 .env.local
 .env.production
 
+# Firebase Service Account (يحتوي على مفاتيح سرية)
+firebase-service-account.json
+
 # Logs
 logs/
 *.log
