--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,11 @@ SMTP_EMAIL=your_email@gmail.com
 SMTP_PASSWORD=your_16_character_app_password
 FROM_NAME=مهنتي لي
 FROM_EMAIL=your_email@gmail.com
+
+# ============================================
+# Firebase Cloud Messaging (FCM) Configuration
+# ============================================
+# لإرسال الإشعارات Push Notifications عبر Firebase
+# يجب إضافة ملف firebase-service-account.json في المجلد الرئيسي للمشروع
+# احصل على الملف من: Firebase Console > Project Settings > Service Accounts
+# رابط مباشر: https://console.firebase.google.com/project/_/settings/serviceaccounts/adminsdk
