--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mongoose": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^7.0.12",
     "sharp": "^0.34.5",
+    "socket.io": "^4.7.2",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
