--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "Backend API for Mehnati Li - منصة مهنتي لي للإعلانات والوظائف - v2.0 with Backblaze B2 storage and compression",
   "dependencies": {
+    "axios": "^1.13.2",
     "backblaze-b2": "^1.7.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
