--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ node_modules/
 firebase-service-account.json
 
 # Logs
-logs/
-*.log
+logs/*.log
+!logs/.gitkeep
 npm-debug.log*
 
 # Uploads (local development)
